--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,6 +1,3 @@
-# This workflow will build a Java project with Ant
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-ant
-
 name: catraca ci nativo
 
 on:
@@ -26,3 +23,7 @@ jobs:
         cd src
         javac -cp . Main.java
         java -cp . Testes.java
+    - name: exec
+      run: |
+        cd src
+        java -cp . Testes
