ci: arrumando script para testes com actions

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -22,8 +22,8 @@ jobs:
       run: |
         cd src
         javac -cp . Main.java
-        java -cp . Testes.java
+        javac -cp . Testes.java
     - name: exec
       run: |
         cd src
-        java -cp . Testes
+        java -cp . Testes.java
