--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -27,3 +27,12 @@ jobs:
       run: |
         cd src
         java -cp . Testes
+    - uses: mr-smithers-excellent/docker-build-push@v6
+      name: subindo no docker
+      with:
+        image: annaczr/catraca
+        tags: 1.0
+        registry: docker.io
+        dockerfile: dockerfile
+        username: ${{secrets.DOCKER_USER}}
+        password: ${{secrets.DOCKER_PASSWORD}}
