ci: step para versionamento no docker

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -36,13 +36,9 @@ jobs:
         dockerfile: dockerfile
         username: ${{ secrets.DOCKER_USER }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-    - name: Version Tag Docker Image
-      uses: jacobsvante/version-tag-docker-image@v0.1.0
+        
+    - name: versioning
+      uses: codacy/git-version@2.4.0
       with:
-        # Manually provided semantic version (e.g: 0.3.4)
-        version: 1.0
-        docker-registry: docker.io
-        docker-username: ${{ secrets.DOCKER_USER }}
-        docker-password: ${{ secrets.DOCKER_PASSWORD }}
-        docker-image: ${{secrets.DOCKER_USER}}/catraca
+        release-branch: main
        
