--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -27,18 +27,18 @@ jobs:
       run: |
         cd src
         java -cp . Testes
+        
+     # versionamento 1
+    - name : gerando versao
+      run: echo ${{ github.run_number }}
+    
     - uses: mr-smithers-excellent/docker-build-push@v6
       name: subindo no docker
       with:
         image: ${{secrets.DOCKER_USER}}/catraca
-        tags: 1.0
+        tags: latest, ${{ github.run_number }}
         registry: docker.io
         dockerfile: dockerfile
         username: ${{ secrets.DOCKER_USER }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        
-    - name: versioning
-      uses: codacy/git-version@2.4.0
-      with:
-        release-branch: main
        
